[tool.poetry]
name = "geoplot"
version = "0.1.0"
description = ""
authors = ["Mostafa Farrag <moah.farag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.0"
cartopy = "0.20.2"
seaborn = "^0.12.0"
mapclassify = "^2.4.3"
geopandas = "^0.11.1"
contextily = "^1.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
